2022-12-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-eev2022pyvideo): new function.
	(ee-1stclassvideos-info): added an entry for "eev2022py".

2022-12-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-rstdoc-intro): added some sections.

	* eev-tlinks.el (find-rstdoc-links): use another name for the
	temporary buffer.

	* eev-videolinks.el (find-eev2022klavideo): new function.
	(ee-1stclassvideos-info): added an entry for "eev2022kla".

2022-12-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el (ee-code-rstdoc): added `find-{c}dochelp'.

	* eev-intro.el (find-rstdoc-intro): new function.
	(find-eev-intro): added an entry for `(find-rstdoc-intro)'.

	* eev-rstdoc.el (ee-rstdoc-getfield0): new function.

	* eev-tlinks.el (find-rstdoc-links): new function.

2022-12-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kla-intro): added some sections.

2022-11-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-find-cfile): fixed a typo.

2022-11-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-intro): rewrote the section about
	keybindings.
	(find-eev-install-intro): new section: "0. Loading eev".

2022-11-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-klts, eeklts): new functions.

	* eev-code.el (ee-code-c-d-:anchor, ee-code-c-d-:info): added more
	comments.

2022-11-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-klfs): fixed a bug.

2022-11-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hydras.el (ee-edit-index-hydra): added <right>, <left>, SPC,
	and DEL.

	* eev-code.el: added a (code-c-d "org" ...).

	* eev-tlinks.el (find-kla-links): new function.

2022-11-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-kla, ee-kl-sexp-klas, ee-kl-sexp-klf):
	fixed the missing ":fname" arguments.

2022-11-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hydras.el (eev-index-edit): renamed to `ee-edit-index'.